--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,12 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div>%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover"> 
+		<div class="flex flex-col min-h-svh max-h-svh font-sans">%sveltekit.body%</div>
 	</body>
 </html>
