--- a/site/src/app.html
+++ b/site/src/app.html
@@ -11,6 +11,6 @@
 		<link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 	</head>
 	<body data-sveltekit-preload-data="hover"> 
-		<div class="flex flex-col min-h-svh max-h-svh font-sans">%sveltekit.body%</div>
+		<div class="flex flex-col min-w-0 min-h-svh max-h-svh font-sans">%sveltekit.body%</div>
 	</body>
 </html>
