--- a/site/src/app.html
+++ b/site/src/app.html
@@ -10,7 +10,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 	</head>
-	<body data-sveltekit-preload-data="hover"> 
-		<div class="flex flex-col min-w-0 min-h-svh max-h-svh font-sans">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover" class="flex flex-col min-h-svh overscroll-none"> 
+		%sveltekit.body%
 	</body>
 </html>
