--- a/site/src/app.html
+++ b/site/src/app.html
@@ -11,6 +11,10 @@
 		<link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="flex flex-col min-h-svh overscroll-none"> 
-		%sveltekit.body%
+		<div style="display: contents;">
+			<div data-vaul-drawer-wrapper class="min-h-svh">
+				%sveltekit.body%
+			</div>
+		</div>
 	</body>
 </html>
