minor tweaks to docs

--- a/site/src/app.html
+++ b/site/src/app.html
@@ -12,7 +12,7 @@
 	</head>
 	<body data-sveltekit-preload-data="hover" class="flex flex-col min-h-svh overscroll-none"> 
 		<div style="display: contents;">
-			<div data-vaul-drawer-wrapper class="min-h-svh">
+			<div data-vaul-drawer-wrapper class="min-h-svh bg-background">
 				%sveltekit.body%
 			</div>
 		</div>
