--- a/site/src/app.html
+++ b/site/src/app.html
@@ -10,9 +10,9 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 	</head>
-	<body data-sveltekit-preload-data="hover" class="flex flex-col min-h-svh overscroll-none"> 
+	<body data-sveltekit-preload-data="hover" class="flex flex-col min-h-screen overscroll-none"> 
 		<div style="display: contents;">
-			<div data-vaul-drawer-wrapper class="min-h-svh bg-background">
+			<div data-vaul-drawer-wrapper class="flex flex-col flex-1 bg-background">
 				%sveltekit.body%
 			</div>
 		</div>
