fix layout centering on homepage

--- a/site/src/app.html
+++ b/site/src/app.html
@@ -12,7 +12,7 @@
 	</head>
 	<body data-sveltekit-preload-data="hover" class="flex flex-col min-h-screen overscroll-none"> 
 		<div style="display: contents;">
-			<div data-vaul-drawer-wrapper class="flex flex-col flex-1 bg-background">
+			<div data-vaul-drawer-wrapper class="flex flex-col flex-1 min-h-0 bg-background">
 				%sveltekit.body%
 			</div>
 		</div>
